# FSIV

./: .gitignore
color_balance/: color_balance.cpp  common_code.cpp
p1/cbg_process/: LEEME.TXT  README.md
p1/realzar_primer_plano/: LEEME.TXT  common_code.cpp  common_code.hpp  realzar_primer_plano.cpp
p2/color_balance/: LEEME.TXT  README.md  color_balance.cpp  common_code.hpp  test_common_code.cpp
p2/color_balance-build/: CMakeCache.txt  Makefile  cmake_install.cmake  color_balance  color_balance.cbp  test_common_code
p2/img_equalization/: CHANGELOG.TXT  CMakeLists.txt  README.md  common_code.cpp  img_equalization.cpp  test_common_code.cpp
p2/img_equalization-build/: CMakeCache.txt  Makefile  cmake_install.cmake  img_equalization  img_equalization.cbp  test-3-11011307571876.xml  test-6-13452851449037.xml  test-9-10641071698117.xml  test-9-10644924745356.xml  test-9-10646558202501.xml  test_common_code
p3/sharpening/: CHANGELOG.TXT  CMakeLists.txt  LEEME.TXT  README.md  common_code.cpp  common_code.hpp  sharpen.cpp  test_common_code.cpp
p3/usm_enhance/: CHANGELOG.TXT  CMakeLists.txt  LEEME.TXT  README.md  common_code.cpp  common_code.hpp  test_common_code.cpp  test_common_code_obf.cpp  usm_enhance.cpp
p4/aug_real/: CHANGELOG.TXT  CMakeLists.txt  LEEME.txt  README.md  aug_real.cpp  common_code.cpp  common_code.hpp  test_common_code.cpp  test_data.cpp  test_data.hpp
p4/calibrate/: CHANGELOG.TXT  CMakeLists.txt  LEEME.txt  README.md  calibrate.cpp  common_code.cpp  common_code.hpp  test_common_code.cpp  undistort.cpp
p4/calibrate/data/: elp-intrinsics.xml  logitech.xml
p5/bcksegm/: common_code.cpp  common_code.hpp  test_common_code.cpp  vsegadv.cpp  vsegbase.cpp
p6/graphs/: knn-grey.eps  knn-grey.tex  knn-hist.eps  knn-hist.tex  knn-lbp.eps  knn-lbp.tex  knn_gnuplot.sh  knn_grey  knn_hist  knn_lbp  rf-E001.eps  rf-E001.tex  rf-E01.eps  rf-E01.tex  rf_E001_hist  rf_E01_hist  rf_gnuplot.sh  svm-grey.eps  svm-grey.tex  svm-k0.eps  svm-k0.tex  (+16 more)
p6/histopathology/: CHANGELOG.TXT  CMakeLists.txt  LEEME.txt  README.md  classifiers.cpp  classifiers.hpp  common_code.hpp  dataset.cpp  dataset.hpp  features.cpp  features.hpp  gray_levels_features.cpp  gray_levels_features.hpp  histogram_hsv.cpp  histogram_hsv.hpp  local_binary_pattern.cpp  local_binary_pattern.hpp  metrics.cpp  metrics.hpp  show_dataset.cpp  test_clf.cpp  test_common_code.cpp  train_clf.cpp  train_test_clf.cpp
p6/histopathology/data/: README.md
p6/histopathology/data/histopathology/: test_labels.txt  train_labels.txt
(+25 files in other folders)
